--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
       </div>
     </div>
   </div>
+  <div class="row row-cols-1 row-cols-md-3 g-3 p-3">
+    <div class="col">
+      <div class="card">
+        <center class="card-img-top border-bottom">
+          <img src="./assets/zip.png" class="p-3" alt="zip" height="268px">
+        </center>
+        <div class="card-body">
+          <h3 class="card-title">코드 다운로드</h3>
+          <a class="btn btn-warning bg-gradient btn-lg w-100" href="./practical.zip">코드 다운로드</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- <div class="row row-cols-1 row-cols-md-3 g-3 p-3">
     <div class="col">
       <div class="card">
