--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
         </div>
       </div>
     </div>
+    <div class="col">
+      <div class="card">
+        <center class="card-img-top border-bottom">
+          <img src="./assets/zip.png" class="p-3" alt="zip" height="268px">
+        </center>
+        <div class="card-body">
+          <h3 class="card-title">수정 코드 보기</h3>
+          <a class="btn btn-warning bg-gradient btn-lg w-100" href="https://raw.githubusercontent.com/microschool-kr/2023-Winter-Camp/main/object_detection/5_stop_sign.py">코드 보기</a>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- <div class="row row-cols-1 row-cols-md-3 g-3 p-3">
     <div class="col">
